Frontend/src/pages/styles.module.css
.container {
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  max-width: 1500px;
  border: 1px solid;
}

.header {
  text-align: center;
  border: 1px solid;
  padding: 10px;
  font-size: 22px;
  font-weight: bold;
}

.box {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.row {
  display: flex;
  justify-content: space-between;
  border: 1px solid;
  overflow-x: auto;
}

.row::-webkit-scrollbar {
  height: 5px;
}

.row::-webkit-scrollbar-track {
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

.row::-webkit-scrollbar-thumb {
  background-color: black;
  border-radius: 5px;
}

.element {
  flex: 1;
  border: 1px solid;
  text-align: center;
  padding: 10px;
  white-space: nowrap;
}

.controls {
  border: 1px solid;
  padding: 30px;
}

